[tool.poetry]
name = "DockerHubUpdateNotifier"
version = "v1.2.9"
description = ""
authors = ["roy-n-roy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
django-bootstrap4 = "^2.2.0"
requests = "^2.24.0"
schedule = "^0.6.0"
CacheControl = {extras = ["filecache"], version = "^0.12.6"}
uWSGI = {version = "^2.0.19", optional = true}
psycopg2 = {version = "^2.8.5", optional = true}
sentry-sdk = {version = "^0.16.5", optional = true}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"
rope = "^0.17.0"
pygraphviz = "^1.6"
django-extensions = "^3.0.5"

[tool.poetry.extras]
production = ["psycopg2", "uWSGI", "sentry-sdk"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
