[tool.poetry]
name = "DockerHubUpdateNotifier"
version = "v1.2.10"
description = ""
authors = ["roy-n-roy"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
django-bootstrap4 = "^2.3.1"
requests = "^2.25.0"
schedule = "^0.6.0"
CacheControl = {extras = ["filecache"], version = "^0.12.6"}
uWSGI = {version = "^2.0.19", optional = true}
psycopg2 = {version = "^2.8.6", optional = true}
sentry-sdk = {version = "^0.19.2", optional = true}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
rope = "^0.18.0"
pygraphviz = "^1.6"
django-extensions = "^3.0.9"

[tool.poetry.extras]
production = ["psycopg2", "uWSGI", "sentry-sdk"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
